--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Shadows Into Light Two', cursive, sans-serif;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -6,7 +10,6 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
-    font-family: 'Shadows Into Light Two', cursive, sans-serif;
     font-weight: bold;
     background-image: url(images/background.png);
     background-size: cover;
@@ -51,7 +54,6 @@ body {
 
 .add-todo #submitBtn {
     font-size: 20px;
-    /* padding: 10px;*/
     margin-left: 280px;
     width: 90px;
     position: absolute;
@@ -82,7 +84,6 @@ body {
 .content {
     width: 380px;
     position: center;
-    /* border-style: solid; */
     left: 10px;
 }
 
@@ -93,13 +94,14 @@ body {
 
 .item {
     width: 380px;
-    height: 45px;
     min-height: 45px;
     position: relative;
     border-bottom: 1px solid black;
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    text-align: center;
 }
 
 .add-todo {
@@ -117,7 +119,6 @@ body {
 }
 
 .add-todo i {
-    /* position: absolute; */
     font-size: 40px;
     color: #4162f6;
     margin-bottom: 15px;
@@ -133,17 +134,6 @@ body {
     padding-left: 10px;
     font-family: 'Shadows Into Light Two', cursive, sans-serif;
     font-weight: bold;
-}
-
-.item p.text {
-    /* position: absolute; */
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    left: 50px;
-    top: 5px;
-    background-color: transparent;
-    max-width: 285px;
 }
 
 .item i.fa-trash {
@@ -172,14 +162,6 @@ body {
     cursor: pointer;
     text-shadow: 1px 3px 5px red;
     transform: rotate(50deg);
-}
-
-.item p.text {
-    /* position: absolute; */
-    font-size: 25px;
-    padding-right: 40px;
-    left: 80px;
-    padding-top: 50px;
 }
 
 .description {
