--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 * {
-    font-family: 'Shadows Into Light Two', cursive, sans-serif;
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.05em;
 }
 
+
+
 body {
-    padding: 0;
+    padding: 0.4em;
     margin: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+    width: 98vw;
     font-weight: bold;
     background-image: url(images/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
+    
+    
 }
 
 .todo-container {
     margin: 0 auto;
     padding: 10px;
-    width: 50%;
+    width: 98vw;
 }
 
 .header {
     min-height: 45px;
-    width: 380px;
-    height: 45px;
+    width: 98vw;
+    height: 1rem;
     background-size: 100% 200%;
     background-image: url(images/header.jpg);
     border-style: solid;
@@ -35,28 +36,29 @@ body {
     border-bottom-right-radius: 20px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .header i {
-    width: 60px;
-    height: 60px;
-    margin-left: 60px;
+
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    
 }
 
 .add-todo {
-    width: 100%;
-    height: 100%;
+    width: 98vw;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
 }
 
 .add-todo #submitBtn {
-    font-size: 20px;
-    margin-left: 280px;
-    width: 90px;
-    position: absolute;
+    font-size: 1.5em;
+ 
 }
 
 .add-todo #submitBtn:hover {
@@ -68,6 +70,7 @@ body {
 .header i {
     font-size: 25px;
     margin-top: 10px;
+
 }
 
 .header i.fa-sync {
@@ -82,9 +85,9 @@ body {
 }
 
 .content {
-    width: 380px;
-    position: center;
-    left: 10px;
+    width: 98vw;
+    display: flex;
+    justify-content: center;
 }
 
 .content ul {
@@ -93,20 +96,20 @@ body {
 }
 
 .item {
-    width: 380px;
+    width: 90vw;
     min-height: 45px;
     position: relative;
     border-bottom: 1px solid black;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 4px;
+    margin-top: 10px;
     display: flex;
     text-align: center;
 }
 
 .add-todo {
     position: relative;
-    width: 360px;
+    width: 95vw;
     height: 40px;
     background-color: white;
     padding: 10px;
@@ -126,8 +129,8 @@ body {
 
 .add-todo input {
     left: 20px;
-    height: 25px;
-    width: 300px;
+    height: 1.2em;
+    width: 70vw;
     background-color: transparent;
     border: none;
     font-size: 20px;
@@ -141,7 +144,7 @@ body {
     padding-left: 5px;
     color: rgba(0, 0, 0, 0.746);
     margin-right: 10px;
-    margin-top: 8px;
+    
 }
 
 .item i.fa-trash:hover {
@@ -151,7 +154,6 @@ body {
 }
 
 .item i.fa-circle {
-    /* position: absolute; */
     font-size: 25px;
     padding-left: 5px;
     left: 5px;
@@ -165,5 +167,5 @@ body {
 }
 
 .description {
-    margin-left: 20px;
+    margin-left: 0.5em;
 }
